--- a/css/stilsida.css
+++ b/css/stilsida.css
@@ -202,55 +202,85 @@ header ul {
   50% {transform: translate(-50px);}
   100% {transform: translate(0);}
 }
-.smedia {
-  width: 48px;
-  height: 192px;
-  position: fixed;
-  right: 0px;
-  top: 100px;
-}
-.smedia a {
+.sMedia {
+  display: flex;
+  position: relative;
+  background-color: none;
+  order: 5; }
+
+.sMedia a {
+  text-decoration: none; }
+
+.sMedia div {
   display: block;
-  width: 48px;
-  height: 48px;
-  margin-bottom: 2px;
-  background-image: url(../Myndir/logos.png);
-  transform: translateX(50px);
-  animation-name: media-links;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
+  text-decoration: none; }
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?brfh14');
+  src:  url('fonts/icomoon.eot?brfh14#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?brfh14') format('truetype'),
+    url('fonts/icomoon.woff?brfh14') format('woff'),
+    url('fonts/icomoon.svg?brfh14#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
-.twitter {
-  background-color: #2D52FF;
-  background-position: 0 0;
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-.twitter:hover {
-  background-color: #198699;
+.icon-facebook,
+.icon-github {
+ color: $fff;
+font-size: 1.8em;
+margin-top: .3em;
 }
-.fb {
-  background-color: #0F1699;
-  background-position: 0 -48px;
-  animation-delay: 50ms;
+.icon-facebook:before {
+  content: "\ea90";
 }
-.fb:hover {
-  background-color: #495EE5;
+.icon-github:before {
+  content: "\eab0";
 }
-.pin {
-  background-color: #66201D;
-  background-position: 0 -96px;
-  animation-delay: 100ms;
+.icon-tumblr:before {
+  content: "\eab9";
 }
-.pin:hover {
-background-color: #CC403A;
+.icon-github {
+  color: red;
+  font-size: 10em;
 }
-.insta {
-  background-color: #CC7E45;
-  background-position: 0 -144px;
-  animation-delay: 150ms;
+.icon-facebook {
+    color: blue;
 }
-.insta:hover{
-  background-color: #663F22;
+.facebook {
+    position: relative;
+    height: 3em;
+    width: 3em;
+    padding: .6em
 }
+@media screen and (min-width: 64em) {
+
+  .sMedia {
+    display: block;
+    position: fixed;
+    top: 4em;
+    left: 0;
+    height: 12em;
+    width: 3em; }
+
+  .sMedia div {
+    width: 3em;
+    margin: 0;
+    padding: .5em 0 0 0; } }
 /*
   ========================================
   Slideshow
@@ -444,15 +474,7 @@ ul {
 li {
 		display: inline-block;
 	}
-a {
-    color: white;
-    padding: 10px 100px;
-    text-decoration: none;
-    text-align: center;
-    display: inline-block;
-    background-color: #3B3C40;
-    font-size: 18px;
-	}
+
 li a:hover {
       background: #314b60;
       box-shadow: inset 0 0 10px 1px rgba(0, 0, 0, .3);
